--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Basic
 
-NEXT_PUBLIC_SITE_TITLE=Wasmswap
+NEXT_PUBLIC_SITE_TITLE=HuahuaSwap
 NEXT_PUBLIC_TEST_MODE_DISABLED=false
 NEXT_PUBLIC_APP_VERSION=1.2.5
-NEXT_PUBLIC_GAS_PRICE=0.0025ujunox
+NEXT_PUBLIC_GAS_PRICE=0.1uhuahua
 
 # Asset Information
 
@@ -21,8 +21,8 @@ NEXT_PUBLIC_DARK_MODE_ENABLED_BY_DEFAULT=false
 # Contact Information
 
 NEXT_PUBLIC_FEEDBACK_LINK=#
-NEXT_PUBLIC_INTERFACE_GITHUB_LINK=https://github.com/Wasmswap/wasmswap-interface
-NEXT_PUBLIC_CONTRACTS_GITHUB_LINK=https://github.com/ben2x4/crustacean-swap
+NEXT_PUBLIC_INTERFACE_GITHUB_LINK=https://github.com/ChihuahuaChain/huahuaswap-interface
+NEXT_PUBLIC_CONTRACTS_GITHUB_LINK=https://github.com/ChihuahuaChain/huahuaswap-contract
 NEXT_PUBLIC_TELEGRAM_LINK=#
 NEXT_PUBLIC_DISCORD_LINK=#
 NEXT_PUBLIC_TWITTER_LINK=#
