--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,33 @@
 # Basic
-NEXT_PUBLIC_SITE_TITLE=Wasmswap
+
+NEXT_PUBLIC_SITE_TITLE=HuahuaSwap
 NEXT_PUBLIC_TEST_MODE_DISABLED=false
-NEXT_PUBLIC_APP_VERSION=1.0.0
-NEXT_PUBLIC_GAS_PRICE=0.0025ujuno
+NEXT_PUBLIC_APP_VERSION=1.2.5
+NEXT_PUBLIC_GAS_PRICE=0.1uhuahua
 
 # Asset Information
-NEXT_PUBLIC_CHAIN_INFO_URL=/chain_info.local.json
-NEXT_PUBLIC_POOLS_LIST_URL=/pools_list.local.json
-NEXT_PUBLIC_IBC_ASSETS_URL=/ibc_assets.local.json
+
+NEXT_PUBLIC_CHAIN_INFO_URL=/chain_info.testnet.json
+NEXT_PUBLIC_POOLS_LIST_URL=/pools_list.testnet.json
+NEXT_PUBLIC_IBC_ASSETS_URL=/ibc_assets.json
 
 # Feature flags
-NEXT_PUBLIC_ENABLE_FEATURE_TRANSFERS=false
-NEXT_PUBLIC_ENABLE_FEATURE_STAKING=false
-NEXT_PUBLIC_ENABLE_FEATURE_REWARDS=false
+
+NEXT_PUBLIC_ENABLE_FEATURE_TRANSFERS=true
+NEXT_PUBLIC_ENABLE_FEATURE_STAKING=true
+NEXT_PUBLIC_ENABLE_FEATURE_REWARDS=true
 NEXT_PUBLIC_DARK_MODE_ENABLED_BY_DEFAULT=false
 
 # Contact Information
+
 NEXT_PUBLIC_FEEDBACK_LINK=#
-NEXT_PUBLIC_INTERFACE_GITHUB_LINK=https://github.com/Wasmswap/wasmswap-interface
-NEXT_PUBLIC_CONTRACTS_GITHUB_LINK=https://github.com/ben2x4/crustacean-swap
+NEXT_PUBLIC_INTERFACE_GITHUB_LINK=https://github.com/ChihuahuaChain/huahuaswap-interface
+NEXT_PUBLIC_CONTRACTS_GITHUB_LINK=https://github.com/ChihuahuaChain/huahuaswap-contract
 NEXT_PUBLIC_TELEGRAM_LINK=#
 NEXT_PUBLIC_DISCORD_LINK=#
 NEXT_PUBLIC_TWITTER_LINK=#
 
 # Governance link
+
 NEXT_PUBLIC_GOVERNANCE_LINK_URL=#
 NEXT_PUBLIC_GOVERNANCE_LINK_LABEL=Governance
