--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wasmswap-interface",
-  "version": "1.2.5",
+  "name": "huahuaswap-interface",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "dev:w-blocks": "BUNDLE_JUNOBLOCKS=true next dev",
