--- a/.env
+++ b/.env
@@ -31,3 +31,6 @@ NEXT_PUBLIC_TWITTER_LINK=#
 
 NEXT_PUBLIC_GOVERNANCE_LINK_URL=#
 NEXT_PUBLIC_GOVERNANCE_LINK_LABEL=Governance
+
+NEXT_PUBLIC_CW20_CODE_ID=18
+NEXT_PUBLIC_HUAHUASWAP_CODE_ID=21
