--- a/.env
+++ b/.env
@@ -33,4 +33,6 @@ NEXT_PUBLIC_GOVERNANCE_LINK_URL=#
 NEXT_PUBLIC_GOVERNANCE_LINK_LABEL=Governance
 
 NEXT_PUBLIC_CW20_CODE_ID=18
-NEXT_PUBLIC_HUAHUASWAP_CODE_ID=21
+NEXT_PUBLIC_HUAHUASWAP_CODE_ID=22
+
+NEXT_PUBLIC_BLOCK_EXPLORER=https://dev.mintscan.io/chihuahua/txs/
