--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Basic
 
-NEXT_PUBLIC_SITE_TITLE=HuahuaSwap
+NEXT_PUBLIC_SITE_TITLE=HUAHUAswap
 NEXT_PUBLIC_TEST_MODE_DISABLED=true
 NEXT_PUBLIC_APP_VERSION=1.0.0
 NEXT_PUBLIC_GAS_PRICE=0.1uhuahua
@@ -23,9 +23,9 @@ NEXT_PUBLIC_DARK_MODE_ENABLED_BY_DEFAULT=true
 NEXT_PUBLIC_FEEDBACK_LINK=#
 NEXT_PUBLIC_INTERFACE_GITHUB_LINK=https://github.com/ChihuahuaChain/huahuaswap-interface
 NEXT_PUBLIC_CONTRACTS_GITHUB_LINK=https://github.com/ChihuahuaChain/huahuaswap-contract
-NEXT_PUBLIC_TELEGRAM_LINK=#
-NEXT_PUBLIC_DISCORD_LINK=#
-NEXT_PUBLIC_TWITTER_LINK=#
+NEXT_PUBLIC_TELEGRAM_LINK=https://t.me/chihuahua_cosmos
+NEXT_PUBLIC_DISCORD_LINK=https://discord.gg/chihuahua
+NEXT_PUBLIC_TWITTER_LINK=https://twitter.com/ChihuahuaChain
 
 # Governance link
 
