added two pools

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ NEXT_PUBLIC_DARK_MODE_ENABLED_BY_DEFAULT=true
 
 # Contact Information
 
-NEXT_PUBLIC_FEEDBACK_LINK=#
+NEXT_PUBLIC_FEEDBACK_LINK=https://chihuahua.canny.io/huahuaswap
 NEXT_PUBLIC_INTERFACE_GITHUB_LINK=https://github.com/ChihuahuaChain/huahuaswap-interface
 NEXT_PUBLIC_CONTRACTS_GITHUB_LINK=https://github.com/ChihuahuaChain/huahuaswap-contract
 NEXT_PUBLIC_TELEGRAM_LINK=https://t.me/chihuahua_cosmos
@@ -29,7 +29,7 @@ NEXT_PUBLIC_TWITTER_LINK=https://twitter.com/ChihuahuaChain
 
 # Governance link
 
-NEXT_PUBLIC_GOVERNANCE_LINK_URL=#
+NEXT_PUBLIC_GOVERNANCE_LINK_URL=https://commonwealth.im/chihuahua/discussions/4.%20Governance
 NEXT_PUBLIC_GOVERNANCE_LINK_LABEL=Governance
 
 NEXT_PUBLIC_CW20_CODE_ID=18
