add create token feature

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ NEXT_PUBLIC_TWITTER_LINK=#
 
 NEXT_PUBLIC_GOVERNANCE_LINK_URL=#
 NEXT_PUBLIC_GOVERNANCE_LINK_LABEL=Governance
+
+# TOKEN MANAGER 
+NEXT_PUBLIC_CW20_TOKEN_MANAGER=#
+NEXT_PUBLIC_NATIVE_DENOM=#
+NEXT_PUBLIC_TOKEN_CREATION_FEE=#
