wip: integrate cosmostation

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@cosmjs/math": "0.27.0-rc2",
     "@cosmjs/proto-signing": "0.27.0-rc2",
     "@cosmjs/stargate": "0.27.0-rc2",
+    "@cosmostation/cosmos-client": "^0.0.1",
+    "@cosmostation/extension-client": "^0.1.7",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "@next/bundle-analyzer": "^12.1.0",
@@ -34,7 +36,7 @@
     "focus-visible": "^5.2.0",
     "gsap": "^3.7.1",
     "junoblocks": "^0.2.1",
-    "next": "12.1.0",
+    "next": "^12.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
