--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-dom": "^17.0.0",
     "react-hot-toast": "^2.2.0",
     "react-merge-refs": "^1.1.0",
-    "react-query": "3.34.5",
+    "react-query": "^3.39.2",
     "recoil": "^0.7.2",
     "sass": "^1.45.0"
   },
