--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev:w-blocks": "BUNDLE_JUNOBLOCKS=true next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "prettier:write": "prettier --write .",
     "typecheck": "tsc"
   },
@@ -20,8 +20,9 @@
     "@cosmjs/math": "0.27.0-rc2",
     "@cosmjs/proto-signing": "0.27.0-rc2",
     "@cosmjs/stargate": "0.27.0-rc2",
-    "@cosmostation/cosmos-client": "^0.0.1",
-    "@cosmostation/extension-client": "^0.1.7",
+    "@cosmostation/cosmos-client": "^0.0.4",
+    "@cosmostation/extension-client": "^0.1.11",
+    "@cosmostation/wc-modal": "^0.0.4",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "@next/bundle-analyzer": "^12.1.0",
@@ -47,11 +48,14 @@
     "sass": "^1.45.0"
   },
   "devDependencies": {
-    "@keplr-wallet/types": "^0.9.9",
+    "@keplr-wallet/types": "^0.8.8",
     "@types/react": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "autoprefixer": "^10.3.1",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "eslint-plugin-react": "^7.31.8",
     "next-bundle-junoblocks": "^1.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
