--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@reach/portal": "^0.16.0",
     "@reach/tooltip": "^0.16.2",
     "@react-spring/web": "^9.4.2",
+    "@rehooks/local-storage": "^2.4.4",
     "@stitches/react": "^1.2.6",
     "body-scroll-lock": "^4.0.0-beta.0",
     "color": "^4.1.0",
