add new asset listing link

--- a/.env
+++ b/.env
@@ -21,9 +21,9 @@ NEXT_PUBLIC_TELEGRAM_LINK=https://t.me/chihuahua_cosmos
 NEXT_PUBLIC_DISCORD_LINK=https://discord.gg/chihuahua
 NEXT_PUBLIC_TWITTER_LINK=https://twitter.com/ChihuahuaChain
 
-# Governance link
-NEXT_PUBLIC_GOVERNANCE_LINK_URL=https://commonwealth.im/chihuahua/discussions/4.%20Governance
-NEXT_PUBLIC_GOVERNANCE_LINK_LABEL=Governance
+# List new assets
+NEXT_PUBLIC_LIST_ASSET_LINK_URL=https://chihuahua.canny.io/listing
+NEXT_PUBLIC_LIST_ASSET_LINK_LABEL=List new assets
 NEXT_PUBLIC_HUAHUASWAP_CODE_ID=22
 
 NEXT_PUBLIC_BLOCK_EXPLORER=https://www.mintscan.io/chihuahua/txs/
